alterei do hover do botão

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --font-principal: 'inter';
-    --botao-azul-efeito: #408deb;
+    --botao-azul-efeito: #b8c44f;
 }
 
 body{
